--- a/DiscordServerCloner.csproj
+++ b/DiscordServerCloner.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>DiscordServerCloner</AssemblyName>
     <RootNamespace>DiscordServerCloner</RootNamespace>
+	<RuntimeIdentifiers>win10-x64;ubuntu.16.10-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
